<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:tint="@color/white"
                android:src="@drawable/ic_baseline_sort_24">
            </androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp">
            </TextView>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_pending_24"
                android:tint="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="180dp">
            </androidx.appcompat.widget.AppCompatImageView>

        </LinearLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/andrew"
            android:background="@drawable/img_style"
            android:clipToOutline="true"
            android:layout_marginTop="50dp"
            android:layout_marginStart="130dp"
            >
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/andrew_ainsley"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="120dp">
        </TextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_111_11_344_556_433"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="130dp">
        </androidx.appcompat.widget.AppCompatTextView>

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="35dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appleBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/white"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:text="@string/edit_profile"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/white"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_place_24"
            android:text="@string/address"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/white"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_notifications_24"
            android:text="@string/notification"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/white"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_payment_24"
            android:text="@string/payment"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/white"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:text="@string/security"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/white"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_scatter_plot_24"
            android:text="@string/language_english_us"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/white"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
            android:text="@string/dark_mode"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/white"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_privacy_tip_24"
            android:text="@string/privacy_policy"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/white"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_help_24"
            android:text="@string/help_center"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/white"
            android:background="@color/black"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_groups_24"
            android:text="@string/invite_friends"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/design_default_color_error"
            android:background="@color/black"
            android:textColor="@color/design_default_color_error"
            android:drawableStart="@drawable/ic_baseline_login_24"
            android:text="@string/log_out"
            android:paddingStart="20dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24">
        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>
</ScrollView>